@@ -10,6 +10,7 @@
 \alias{\%*\%,numeric,CsparseMatrix-method}
 \alias{coerce,CsparseMatrix,lsparseMatrix-method}
 \alias{coerce,CsparseMatrix,nsparseMatrix-method}
+\alias{coerce,CsparseMatrix,nMatrix-method}
 \alias{coerce,CsparseMatrix,TsparseMatrix-method}
 \alias{coerce,CsparseMatrix,denseMatrix-method}
 \alias{coerce,CsparseMatrix,matrix-method}
