@@ -1,4 +1,5 @@
 \name{lsparseMatrix-classes}
+\title{Sparse logical matrices}
 \docType{class}
 \alias{lsparseMatrix-class}
 \alias{lgCMatrix-class}
@@ -26,6 +27,7 @@
 \alias{\%*\%,ldenseMatrix,lsparseMatrix-method}
 
 \alias{coerce,lsparseMatrix,matrix-method}
+\alias{coerce,lsparseMatrix,dsparseMatrix-method}
 \alias{coerce,lgCMatrix,dgCMatrix-method}
 \alias{coerce,lgCMatrix,lgTMatrix-method}
 \alias{coerce,lgCMatrix,lgeMatrix-method}
@@ -86,7 +88,6 @@
 \alias{tcrossprod,lgCMatrix,missing-method}
 \alias{tcrossprod,lgTMatrix,missing-method}
 \alias{tcrossprod,lsparseMatrix,missing-method}
-\title{Sparse logical matrices}
 \description{The \code{lsparseMatrix} class is a virtual class of sparse
   matrices with \code{TRUE}/\code{FALSE} entries.  Only the positions of the
   elements that are \code{TRUE} are stored.  These can be stored in the
@@ -164,11 +165,14 @@ data(KNex)
 str(mmG.1 <- (KNex $ mm) > 0.1)# "lgC..."
 table(mmG.1@x)# however with many ``non-structural zeros''
 ## from logical to nz_pattern -- okay when there are no NA's :
-nmG.1 <- as(mmG.1, "nMatrix")
+nmG.1 <- as(mmG.1, "nMatrix") # <<< has "TRUE" also where mmG.1 had FALSE
 ## from logical to "double"
-dmG.1 <- as(mmG.1, "dMatrix") # and back:
-lmG.1 <- as(dmG.1, "lMatrix")
-stopifnot(validObject(lmG.1), identical(lmG.1, mmG.1))
+dmG.1 <- as(mmG.1, "dMatrix") # has '0' and back:
+lmG.1 <- as(dmG.1, "lMatrix") # has no extra FALSE, i.e. drop0() included
+stopifnot(identical(nmG.1, as((KNex $ mm) != 0,"nMatrix")),
+          validObject(lmG.1), all(lmG.1@x),
+          # same "logical" but lmG.1 has no 'FALSE' in x slot:
+          all(lmG.1 == mmG.1))
 
 class(xnx <- crossprod(nmG.1))# "nsC.."
 class(xlx <- crossprod(mmG.1))# "dsC.." : numeric
@@ -176,9 +180,9 @@ is0 <- (xlx == 0)
 mean(as.vector(is0))# 99.3\% zeros: quite sparse, but
 table(xlx@x == 0)# more than half of the entries are (non-structural!) 0
 stopifnot(isSymmetric(xlx), isSymmetric(xnx),
-          ## compare xnx and  drop0(xlx) :
+          ## compare xnx and xlx : have the *same* non-structural 0s :
           sapply(slotNames(xnx),
-                 function(n) identical(slot(xnx, n), slot(drop0(xlx), n))))
+                 function(n) identical(slot(xnx, n), slot(xlx, n))))
 }
 \keyword{classes}
 \keyword{algebra}
